# highlighting

vscode/neo-vscode/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
vscode/neo-vscode/syntaxes/: neo.tmLanguage.json
zed/neo-zed/grammars/neo/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
zed/neo-zed/grammars/neo/bindings/c/: tree-sitter-neo.pc.in
zed/neo-zed/grammars/neo/bindings/go/: binding.go  binding_test.go
zed/neo-zed/grammars/neo/bindings/node/: binding.cc  index.d.ts  index.js
zed/neo-zed/grammars/neo/bindings/python/tests/: test_binding.py
zed/neo-zed/grammars/neo/bindings/python/tree_sitter_neo/: __init__.py  binding.c
zed/neo-zed/grammars/neo/bindings/rust/: build.rs  lib.rs
zed/neo-zed/grammars/neo/bindings/swift/TreeSitterNeo/: neo.h
zed/neo-zed/grammars/neo/bindings/swift/TreeSitterNeoTests/: TreeSitterNeoTests.swift
zed/neo-zed/grammars/neo/src/: grammar.json  node-types.json
zed/neo-zed/grammars/neo/test/: comprehensive.neo  example.neo  minimal.neo
zed/neo-zed/grammars/neo/test/corpus/: control_flow.txt  declarations.txt  expressions.txt  types.txt
zed/neo-zed/languages/neo/: indents.scm
