[package]
name = "tree-sitter-neo"
description = "Tree sitter grammar for the Neo programming language."
version = "0.1.0"
authors = ["Skyler Burwell"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "neo"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://codeberg.org/neolang/neo"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.6"
